--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@vercel/kv": "^3.0.0",
     "nanoid": "^5.1.6",
     "next": "16.1.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
