--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "ioredis": "^5.8.2",
     "nanoid": "^5.1.6",
     "next": "16.1.1",
     "react": "19.2.3",
